# MOFS

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cursor/skills/debug_mofs/: SKILL.md
.cursor/skills/jj_operations/: SKILL.md
.cursor/skills/mofs_coding_rule/: SKILL.md
.cursor/skills/mofs_structure_rule/: SKILL.md
docs/: buffer_cache.md  on_disk_layout.md
include/: mofs_core.h  mofs_devio.h  mofs_errno.h  mofs_format.h  mofs_inode.h  mofs_lifecycle.h  mofs_log.h  mofs_mem.h  mofs_posix.h  mofs_struct.h  mofs_time.h  mofs_types.h
include/posix/: dirent.h  fcntl.h  mofs_dirent.h  mofs_fcntl.h  mofs_limits.h  mofs_posix_errno.h  mofs_stat.h  mofs_unistd.h  unistd.h
include/posix/sys/: mofs_stat.h  stat.h
src/: main.c
src/core/: CMakeLists.txt  mofs_core.c  mofs_format.c  mofs_inode.c  mofs_util.c  mofs_util.h
src/core/include/: mofs_buffer.h  mofs_config.h  mofs_core.h  mofs_dir.h  mofs_file.h  mofs_inode.h  mofs_path.h  mofs_perm.h
src/core/modules/: mofs_block.c  mofs_block.h  mofs_buffer.c  mofs_core.c  mofs_core_util.c  mofs_core_util.h  mofs_dir.c  mofs_file.c  mofs_format.c  mofs_inode.c  mofs_path.c  mofs_perm.c
src/dependent/ubuntu/: CMakeLists.txt  devio_ubuntu.c
src/mkfs_mofs/: CMakeLists.txt  mkfs_mofs.c
src/os/: CMakeLists.txt
src/os/linux/: devio_linux.c  mem_linux.c
src/os/linux/include/: mofs_mem.h  mofs_os_types.h  mofs_str.h  mofs_type.h  mofs_user.h  mofs_util.h
src/os/linux/service/: CMakeLists.txt  os_devio.c  os_errno.c  os_log.c  os_mem.c  os_posix_errno.c  os_str.c  os_time.c  os_user.c
src/os/linux/tools/: CMakeLists.txt
src/os/linux/tools/fuse/: CMakeLists.txt  fuse_ops.c  fuse_ops.h
src/os/linux/tools/mkfs/: CMakeLists.txt  mkfs_mofs.c
src/port/: CMakeLists.txt
src/port/include/: mofs_devio.h  mofs_port_errno.h  mofs_port_log.h  mofs_port_mem.h  mofs_port_str.h  mofs_port_time.h  mofs_port_types.h  mofs_port_user.h
src/posix/: CMakeLists.txt  posix.c
src/proc/: CMakeLists.txt
src/proc/linux/fuse/: CMakeLists.txt  fuse.c  fuse_ops.c  fuse_ops.h
src/proc/linux/mkfs/: CMakeLists.txt  mkfs_mofs.c
test/: CMakeLists.txt  README.md
test/core/: CMakeLists.txt  test_core_block_list.c  test_core_format.c  test_core_lifecycle.c  test_core_permissions.c  test_core_timestamps.c  test_core_truncate.c
test/fixtures/: CMakeLists.txt  test_fixture.c  test_fixture.h
test/os/linux/: CMakeLists.txt  test_os_devio.c  test_os_errno.c  test_os_user.c
test/posix/: CMakeLists.txt  test_posix_dir_ops.c  test_posix_errno_tls.c  test_posix_file_ops.c  test_posix_misc.c
